@@ -1,4 +1,4 @@
-DIST ReText-4.0.0.tar.gz 93179 SHA256 8499475f940e734fa7bceefb3478e6b1798bc859bf46d32a77f9a30b1c7a650d SHA512 ffb5e8e0091412761bfd8ebdfdce81f0ac0de32fb69b13dde6ef2497e18d780aabf531b1169d7c5fa112babcb135067cf050346a935b24da5867b7e689108fef WHIRLPOOL 85ffe33d2527eb02ec7262ac08952b445bc596f7e70218f3d51a4c3a0217a7818c431869e24137a91bf07a2b81fa09a6bad0533a693790bdf90d745f8a42645c
-EBUILD retext-4.0.0.ebuild 1119 SHA256 6c8580cb43065c84a77874fd37950d946776e7e8c856f65198731b55599669a3 SHA512 6f07b7a88b84b52093e8f740b39d7738abf1c24a995e178375be47b0bd6a8778cfd24505f22b2987115d61d044d57c171ad316add08a8434704bdd1c90debb95 WHIRLPOOL 79a80d26552b677a66ee5308129fe0dd22fafb6120c250e9c7b2a9a125b2e33c07a2ceb1712b9a1c49400372d7fe627438c3f4681f193239e06d44e076fc1a8a
-MISC ChangeLog 253 SHA256 86a7cd80a897a0855a5e19be821b428ccfcdac5d4e21894db149a1e37cd52be5 SHA512 47efb159f803f5933ffd6835a86ebfc4f8d86cfe3483daf6c5e86c539d70a2c120df16cb2696eb237626095cdeb071f2d5c16a6285a5def971e9d5f55984ff5c WHIRLPOOL b629082f6fb0cfd2c18fe5cc0851c0f16173b2bd31897836aa5e4e67484c526a8f233f8f3c9fa0e8736fc1b05ee76db08178f6a8e54e0a85a40c59f63e41c592
+DIST ReText-4.0.1.tar.gz 92892 SHA256 547f4d4cd6ca826963799a55e124ee22bbd2c1dc33fd11dc0d891cb66af8b77e SHA512 7055df357573ea87227bb169d9016e6d94fa7a299461019b12e56f8f1f15738f239dd6a1fbd2b37a84ea66abac4f85af6ae5d0b41e85323fbe10bbe8a6db4a81 WHIRLPOOL bf47d53870c3d3d913d09c3094a6451aa3b11f51126dd26c21e4f0d814fa876dbaba38adeb36c5660ad849742beb024bc567d49825c8f244941b761ff7eef471
+EBUILD retext-4.0.1.ebuild 1239 SHA256 56b1063cfbc5f3603c3910f311430b654e08e29876c3e27ac6f90ffb4a6e6cfa SHA512 44319ee3c414596a1a2e04e03591de3dc393303568417de45b34ea31616bac82000bf18954f81398e7be557a8cb71241c62f5d2b84da8f421d94c5f04265048f WHIRLPOOL 43b56fa4565b29ca436b330a2b8d78ce212a97c865bffe9fdf9f5764132021c131adb764c59cbdec12c045cab5d4dbc2c0eab736b3996fa23af880cc2ce2c416
+MISC ChangeLog 413 SHA256 8b7a9589cdce582b41960dd556fe6c0f06d6f02dca65694c0df545f09bc23e94 SHA512 f2ee231519cffd4b82678181bb7a8836590b5229062547c83507ddedf299a1809c17f721636d989351338a48bc583b65f2999d3528dfc0529c9f261158994ff5 WHIRLPOOL 802963dae9eb1e84b5a1a34a9386cf8a8cf4c020626c49219ee808d579167bf83e0fa86bd5dbb278a52d91453301b944f5482b3a046ff482ff9080534761225e
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
